sdk/containerservice/arm-containerservice/samples/v21/javascript/README.md
# client library samples for JavaScript

These sample programs show how to use the JavaScript client libraries for in some common scenarios.

| **File Name**                                                                                                                     | **Description**                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                |
| --------------------------------------------------------------------------------------------------------------------------------- | ---------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------- |
| [agentPoolsAbortLatestOperationSample.js][agentpoolsabortlatestoperationsample]                                                   | Aborts the currently running operation on the agent pool. The Agent Pool will be moved to a Canceling state and eventually to a Canceled state when cancellation finishes. If the operation completes before cancellation can take place, a 409 error code is returned. x-ms-original-file: specification/containerservice/resource-manager/Microsoft.ContainerService/aks/stable/2024-10-01/examples/AgentPoolsAbortOperation.json                                                                                                            |
| [agentPoolsCreateOrUpdateSample.js][agentpoolscreateorupdatesample]                                                               | Creates or updates an agent pool in the specified managed cluster. x-ms-original-file: specification/containerservice/resource-manager/Microsoft.ContainerService/aks/stable/2024-10-01/examples/AgentPoolsCreate_Snapshot.json                                                                                                                                                                                                                                                                                                                |
| [agentPoolsDeleteMachinesSample.js][agentpoolsdeletemachinessample]                                                               | Deletes specific machines in an agent pool. x-ms-original-file: specification/containerservice/resource-manager/Microsoft.ContainerService/aks/stable/2024-10-01/examples/AgentPoolsDeleteMachines.json                                                                                                                                                                                                                                                                                                                                        |
| [agentPoolsDeleteSample.js][agentpoolsdeletesample]                                                                               | Deletes an agent pool in the specified managed cluster. x-ms-original-file: specification/containerservice/resource-manager/Microsoft.ContainerService/aks/stable/2024-10-01/examples/AgentPoolsDelete.json                                                                                                                                                                                                                                                                                                                                    |
| [agentPoolsGetAvailableAgentPoolVersionsSample.js][agentpoolsgetavailableagentpoolversionssample]                                 | See [supported Kubernetes versions](https://docs.microsoft.com/azure/aks/supported-kubernetes-versions) for more details about the version lifecycle. x-ms-original-file: specification/containerservice/resource-manager/Microsoft.ContainerService/aks/stable/2024-10-01/examples/AgentPoolsGetAgentPoolAvailableVersions.json                                                                                                                                                                                                               |
| [agentPoolsGetSample.js][agentpoolsgetsample]                                                                                     | Gets the specified managed cluster agent pool. x-ms-original-file: specification/containerservice/resource-manager/Microsoft.ContainerService/aks/stable/2024-10-01/examples/AgentPoolsGet.json                                                                                                                                                                                                                                                                                                                                                |
| [agentPoolsGetUpgradeProfileSample.js][agentpoolsgetupgradeprofilesample]                                                         | Gets the upgrade profile for an agent pool. x-ms-original-file: specification/containerservice/resource-manager/Microsoft.ContainerService/aks/stable/2024-10-01/examples/AgentPoolsGetUpgradeProfile.json                                                                                                                                                                                                                                                                                                                                     |
| [agentPoolsListSample.js][agentpoolslistsample]                                                                                   | Gets a list of agent pools in the specified managed cluster. x-ms-original-file: specification/containerservice/resource-manager/Microsoft.ContainerService/aks/stable/2024-10-01/examples/AgentPoolsList.json                                                                                                                                                                                                                                                                                                                                 |
| [agentPoolsUpgradeNodeImageVersionSample.js][agentpoolsupgradenodeimageversionsample]                                             | Upgrading the node image version of an agent pool applies the newest OS and runtime updates to the nodes. AKS provides one new image per week with the latest updates. For more details on node image versions, see: https://docs.microsoft.com/azure/aks/node-image-upgrade x-ms-original-file: specification/containerservice/resource-manager/Microsoft.ContainerService/aks/stable/2024-10-01/examples/AgentPoolsUpgradeNodeImageVersion.json                                                                                              |
| [machinesGetSample.js][machinesgetsample]                                                                                         | Get a specific machine in the specified agent pool. x-ms-original-file: specification/containerservice/resource-manager/Microsoft.ContainerService/aks/stable/2024-10-01/examples/MachineGet.json                                                                                                                                                                                                                                                                                                                                              |
| [machinesListSample.js][machineslistsample]                                                                                       | Gets a list of machines in the specified agent pool. x-ms-original-file: specification/containerservice/resource-manager/Microsoft.ContainerService/aks/stable/2024-10-01/examples/MachineList.json                                                                                                                                                                                                                                                                                                                                            |
| [maintenanceConfigurationsCreateOrUpdateSample.js][maintenanceconfigurationscreateorupdatesample]                                 | Creates or updates a maintenance configuration in the specified managed cluster. x-ms-original-file: specification/containerservice/resource-manager/Microsoft.ContainerService/aks/stable/2024-10-01/examples/MaintenanceConfigurationsCreate_Update.json                                                                                                                                                                                                                                                                                     |
| [maintenanceConfigurationsDeleteSample.js][maintenanceconfigurationsdeletesample]                                                 | Deletes a maintenance configuration. x-ms-original-file: specification/containerservice/resource-manager/Microsoft.ContainerService/aks/stable/2024-10-01/examples/MaintenanceConfigurationsDelete.json                                                                                                                                                                                                                                                                                                                                        |
| [maintenanceConfigurationsGetSample.js][maintenanceconfigurationsgetsample]                                                       | Gets the specified maintenance configuration of a managed cluster. x-ms-original-file: specification/containerservice/resource-manager/Microsoft.ContainerService/aks/stable/2024-10-01/examples/MaintenanceConfigurationsGet.json                                                                                                                                                                                                                                                                                                             |
| [maintenanceConfigurationsListByManagedClusterSample.js][maintenanceconfigurationslistbymanagedclustersample]                     | Gets a list of maintenance configurations in the specified managed cluster. x-ms-original-file: specification/containerservice/resource-manager/Microsoft.ContainerService/aks/stable/2024-10-01/examples/MaintenanceConfigurationsList.json                                                                                                                                                                                                                                                                                                   |
| [managedClustersAbortLatestOperationSample.js][managedclustersabortlatestoperationsample]                                         | Aborts the currently running operation on the managed cluster. The Managed Cluster will be moved to a Canceling state and eventually to a Canceled state when cancellation finishes. If the operation completes before cancellation can take place, a 409 error code is returned. x-ms-original-file: specification/containerservice/resource-manager/Microsoft.ContainerService/aks/stable/2024-10-01/examples/ManagedClustersAbortOperation.json                                                                                             |
| [managedClustersCreateOrUpdateSample.js][managedclusterscreateorupdatesample]                                                     | Creates or updates a managed cluster. x-ms-original-file: specification/containerservice/resource-manager/Microsoft.ContainerService/aks/stable/2024-10-01/examples/ManagedClustersCreate_Snapshot.json                                                                                                                                                                                                                                                                                                                                        |
| [managedClustersDeleteSample.js][managedclustersdeletesample]                                                                     | Deletes a managed cluster. x-ms-original-file: specification/containerservice/resource-manager/Microsoft.ContainerService/aks/stable/2024-10-01/examples/ManagedClustersDelete.json                                                                                                                                                                                                                                                                                                                                                            |
| [managedClustersGetAccessProfileSample.js][managedclustersgetaccessprofilesample]                                                 | **WARNING**: This API will be deprecated. Instead use [ListClusterUserCredentials](https://docs.microsoft.com/rest/api/aks/managedclusters/listclusterusercredentials) or [ListClusterAdminCredentials](https://docs.microsoft.com/rest/api/aks/managedclusters/listclusteradmincredentials) . x-ms-original-file: specification/containerservice/resource-manager/Microsoft.ContainerService/aks/stable/2024-10-01/examples/ManagedClustersGetAccessProfile.json                                                                              |
| [managedClustersGetCommandResultSample.js][managedclustersgetcommandresultsample]                                                 | Gets the results of a command which has been run on the Managed Cluster. x-ms-original-file: specification/containerservice/resource-manager/Microsoft.ContainerService/aks/stable/2024-10-01/examples/RunCommandResultFailed.json                                                                                                                                                                                                                                                                                                             |
| [managedClustersGetGuardrailsVersionsSample.js][managedclustersgetguardrailsversionssample]                                       | Contains Guardrails version along with its support info and whether it is a default version. x-ms-original-file: specification/containerservice/resource-manager/Microsoft.ContainerService/aks/preview/2024-09-02-preview/examples/GetGuardrailsVersions.json                                                                                                                                                                                                                                                                                 |
| [managedClustersGetMeshRevisionProfileSample.js][managedclustersgetmeshrevisionprofilesample]                                     | Contains extra metadata on the revision, including supported revisions, cluster compatibility and available upgrades x-ms-original-file: specification/containerservice/resource-manager/Microsoft.ContainerService/aks/stable/2024-10-01/examples/ManagedClustersGet_MeshRevisionProfile.json                                                                                                                                                                                                                                                 |
| [managedClustersGetMeshUpgradeProfileSample.js][managedclustersgetmeshupgradeprofilesample]                                       | Gets available upgrades for a service mesh in a cluster. x-ms-original-file: specification/containerservice/resource-manager/Microsoft.ContainerService/aks/stable/2024-10-01/examples/ManagedClustersGet_MeshUpgradeProfile.json                                                                                                                                                                                                                                                                                                              |
| [managedClustersGetSafeguardsVersionsSample.js][managedclustersgetsafeguardsversionssample]                                       | Contains Safeguards version along with its support info and whether it is a default version. x-ms-original-file: specification/containerservice/resource-manager/Microsoft.ContainerService/aks/preview/2024-09-02-preview/examples/GetSafeguardsVersions.json                                                                                                                                                                                                                                                                                 |
| [managedClustersGetSample.js][managedclustersgetsample]                                                                           | Gets a managed cluster. x-ms-original-file: specification/containerservice/resource-manager/Microsoft.ContainerService/aks/stable/2024-10-01/examples/ManagedClustersGet.json                                                                                                                                                                                                                                                                                                                                                                  |
| [managedClustersGetUpgradeProfileSample.js][managedclustersgetupgradeprofilesample]                                               | Gets the upgrade profile of a managed cluster. x-ms-original-file: specification/containerservice/resource-manager/Microsoft.ContainerService/aks/stable/2024-10-01/examples/ManagedClustersGetUpgradeProfile.json                                                                                                                                                                                                                                                                                                                             |
| [managedClustersListByResourceGroupSample.js][managedclusterslistbyresourcegroupsample]                                           | Lists managed clusters in the specified subscription and resource group. x-ms-original-file: specification/containerservice/resource-manager/Microsoft.ContainerService/aks/stable/2024-10-01/examples/ManagedClustersListByResourceGroup.json                                                                                                                                                                                                                                                                                                 |
| [managedClustersListClusterAdminCredentialsSample.js][managedclusterslistclusteradmincredentialssample]                           | Lists the admin credentials of a managed cluster. x-ms-original-file: specification/containerservice/resource-manager/Microsoft.ContainerService/aks/stable/2024-10-01/examples/ManagedClustersListClusterAdminCredentials.json                                                                                                                                                                                                                                                                                                                |
| [managedClustersListClusterMonitoringUserCredentialsSample.js][managedclusterslistclustermonitoringusercredentialssample]         | Lists the cluster monitoring user credentials of a managed cluster. x-ms-original-file: specification/containerservice/resource-manager/Microsoft.ContainerService/aks/stable/2024-10-01/examples/ManagedClustersListClusterMonitoringUserCredentials.json                                                                                                                                                                                                                                                                                     |
| [managedClustersListClusterUserCredentialsSample.js][managedclusterslistclusterusercredentialssample]                             | Lists the user credentials of a managed cluster. x-ms-original-file: specification/containerservice/resource-manager/Microsoft.ContainerService/aks/stable/2024-10-01/examples/ManagedClustersListClusterUserCredentials.json                                                                                                                                                                                                                                                                                                                  |
| [managedClustersListGuardrailsVersionsSample.js][managedclusterslistguardrailsversionssample]                                     | Contains list of Guardrails version along with its support info and whether it is a default version. x-ms-original-file: specification/containerservice/resource-manager/Microsoft.ContainerService/aks/preview/2024-09-02-preview/examples/ListGuardrailsVersions.json                                                                                                                                                                                                                                                                        |
| [managedClustersListKubernetesVersionsSample.js][managedclusterslistkubernetesversionssample]                                     | Contains extra metadata on the version, including supported patch versions, capabilities, available upgrades, and details on preview status of the version x-ms-original-file: specification/containerservice/resource-manager/Microsoft.ContainerService/aks/stable/2024-10-01/examples/KubernetesVersions_List.json                                                                                                                                                                                                                          |
| [managedClustersListMeshRevisionProfilesSample.js][managedclusterslistmeshrevisionprofilessample]                                 | Contains extra metadata on each revision, including supported revisions, cluster compatibility and available upgrades x-ms-original-file: specification/containerservice/resource-manager/Microsoft.ContainerService/aks/stable/2024-10-01/examples/ManagedClustersList_MeshRevisionProfiles.json                                                                                                                                                                                                                                              |
| [managedClustersListMeshUpgradeProfilesSample.js][managedclusterslistmeshupgradeprofilessample]                                   | Lists available upgrades for all service meshes in a specific cluster. x-ms-original-file: specification/containerservice/resource-manager/Microsoft.ContainerService/aks/stable/2024-10-01/examples/ManagedClustersList_MeshUpgradeProfiles.json                                                                                                                                                                                                                                                                                              |
| [managedClustersListOutboundNetworkDependenciesEndpointsSample.js][managedclusterslistoutboundnetworkdependenciesendpointssample] | Gets a list of egress endpoints (network endpoints of all outbound dependencies) in the specified managed cluster. The operation returns properties of each egress endpoint. x-ms-original-file: specification/containerservice/resource-manager/Microsoft.ContainerService/aks/stable/2024-10-01/examples/OutboundNetworkDependenciesEndpointsList.json                                                                                                                                                                                       |
| [managedClustersListSafeguardsVersionsSample.js][managedclusterslistsafeguardsversionssample]                                     | Contains list of Safeguards version along with its support info and whether it is a default version. x-ms-original-file: specification/containerservice/resource-manager/Microsoft.ContainerService/aks/preview/2024-09-02-preview/examples/ListSafeguardsVersions.json                                                                                                                                                                                                                                                                        |
| [managedClustersListSample.js][managedclusterslistsample]                                                                         | Gets a list of managed clusters in the specified subscription. x-ms-original-file: specification/containerservice/resource-manager/Microsoft.ContainerService/aks/stable/2024-10-01/examples/ManagedClustersList.json                                                                                                                                                                                                                                                                                                                          |
| [managedClustersRebalanceLoadBalancersSample.js][managedclustersrebalanceloadbalancerssample]                                     | Rebalance nodes across specific load balancers. x-ms-original-file: specification/containerservice/resource-manager/Microsoft.ContainerService/aks/preview/2024-09-02-preview/examples/LoadBalancers_Rebalance.json                                                                                                                                                                                                                                                                                                                            |
| [managedClustersResetAadProfileSample.js][managedclustersresetaadprofilesample]                                                   | **WARNING**: This API will be deprecated. Please see [AKS-managed Azure Active Directory integration](https://aka.ms/aks-managed-aad) to update your cluster with AKS-managed Azure AD. x-ms-original-file: specification/containerservice/resource-manager/Microsoft.ContainerService/aks/stable/2024-10-01/examples/ManagedClustersResetAADProfile.json                                                                                                                                                                                      |
| [managedClustersResetServicePrincipalProfileSample.js][managedclustersresetserviceprincipalprofilesample]                         | This action cannot be performed on a cluster that is not using a service principal x-ms-original-file: specification/containerservice/resource-manager/Microsoft.ContainerService/aks/stable/2024-10-01/examples/ManagedClustersResetServicePrincipalProfile.json                                                                                                                                                                                                                                                                              |
| [managedClustersRotateClusterCertificatesSample.js][managedclustersrotateclustercertificatessample]                               | See [Certificate rotation](https://docs.microsoft.com/azure/aks/certificate-rotation) for more details about rotating managed cluster certificates. x-ms-original-file: specification/containerservice/resource-manager/Microsoft.ContainerService/aks/stable/2024-10-01/examples/ManagedClustersRotateClusterCertificates.json                                                                                                                                                                                                                |
| [managedClustersRotateServiceAccountSigningKeysSample.js][managedclustersrotateserviceaccountsigningkeyssample]                   | Rotates the service account signing keys of a managed cluster. x-ms-original-file: specification/containerservice/resource-manager/Microsoft.ContainerService/aks/stable/2024-10-01/examples/ManagedClustersRotateServiceAccountSigningKeys.json                                                                                                                                                                                                                                                                                               |
| [managedClustersRunCommandSample.js][managedclustersruncommandsample]                                                             | AKS will create a pod to run the command. This is primarily useful for private clusters. For more information see [AKS Run Command](https://docs.microsoft.com/azure/aks/private-clusters#aks-run-command-preview). x-ms-original-file: specification/containerservice/resource-manager/Microsoft.ContainerService/aks/stable/2024-10-01/examples/RunCommandRequest.json                                                                                                                                                                       |
| [managedClustersStartSample.js][managedclustersstartsample]                                                                       | See [starting a cluster](https://docs.microsoft.com/azure/aks/start-stop-cluster) for more details about starting a cluster. x-ms-original-file: specification/containerservice/resource-manager/Microsoft.ContainerService/aks/stable/2024-10-01/examples/ManagedClustersStart.json                                                                                                                                                                                                                                                           |
| [managedClustersStopSample.js][managedclustersstopsample]                                                                         | This can only be performed on Azure Virtual Machine Scale set backed clusters. Stopping a cluster stops the control plane and agent nodes entirely, while maintaining all object and cluster state. A cluster does not accrue charges while it is stopped. See [stopping a cluster](https://docs.microsoft.com/azure/aks/start-stop-cluster) for more details about stopping a cluster. x-ms-original-file: specification/containerservice/resource-manager/Microsoft.ContainerService/aks/stable/2024-10-01/examples/ManagedClustersStop.json |
| [managedClustersUpdateTagsSample.js][managedclustersupdatetagssample]                                                             | Updates tags on a managed cluster. x-ms-original-file: specification/containerservice/resource-manager/Microsoft.ContainerService/aks/stable/2024-10-01/examples/ManagedClustersUpdateTags.json                                                                                                                                                                                                                                                                                                                                                |
| [operationsListSample.js][operationslistsample]                                                                                   | Gets a list of operations. x-ms-original-file: specification/containerservice/resource-manager/Microsoft.ContainerService/aks/stable/2024-10-01/examples/Operation_List.json                                                                                                                                                                                                                                                                                                                                                                   |
| [privateEndpointConnectionsDeleteSample.js][privateendpointconnectionsdeletesample]                                               | Deletes a private endpoint connection. x-ms-original-file: specification/containerservice/resource-manager/Microsoft.ContainerService/aks/stable/2024-10-01/examples/PrivateEndpointConnectionsDelete.json                                                                                                                                                                                                                                                                                                                                     |
| [privateEndpointConnectionsGetSample.js][privateendpointconnectionsgetsample]                                                     | To learn more about private clusters, see: https://docs.microsoft.com/azure/aks/private-clusters x-ms-original-file: specification/containerservice/resource-manager/Microsoft.ContainerService/aks/stable/2024-10-01/examples/PrivateEndpointConnectionsGet.json                                                                                                                                                                                                                                                                              |
| [privateEndpointConnectionsListSample.js][privateendpointconnectionslistsample]                                                   | To learn more about private clusters, see: https://docs.microsoft.com/azure/aks/private-clusters x-ms-original-file: specification/containerservice/resource-manager/Microsoft.ContainerService/aks/stable/2024-10-01/examples/PrivateEndpointConnectionsList.json                                                                                                                                                                                                                                                                             |
| [privateEndpointConnectionsUpdateSample.js][privateendpointconnectionsupdatesample]                                               | Updates a private endpoint connection. x-ms-original-file: specification/containerservice/resource-manager/Microsoft.ContainerService/aks/stable/2024-10-01/examples/PrivateEndpointConnectionsUpdate.json                                                                                                                                                                                                                                                                                                                                     |
| [privateLinkResourcesListSample.js][privatelinkresourceslistsample]                                                               | To learn more about private clusters, see: https://docs.microsoft.com/azure/aks/private-clusters x-ms-original-file: specification/containerservice/resource-manager/Microsoft.ContainerService/aks/stable/2024-10-01/examples/PrivateLinkResourcesList.json                                                                                                                                                                                                                                                                                   |
| [resolvePrivateLinkServiceIdPostSample.js][resolveprivatelinkserviceidpostsample]                                                 | Gets the private link service ID for the specified managed cluster. x-ms-original-file: specification/containerservice/resource-manager/Microsoft.ContainerService/aks/stable/2024-10-01/examples/ResolvePrivateLinkServiceId.json                                                                                                                                                                                                                                                                                                             |
| [snapshotsCreateOrUpdateSample.js][snapshotscreateorupdatesample]                                                                 | Creates or updates a snapshot. x-ms-original-file: specification/containerservice/resource-manager/Microsoft.ContainerService/aks/stable/2024-10-01/examples/SnapshotsCreate.json                                                                                                                                                                                                                                                                                                                                                              |
| [snapshotsDeleteSample.js][snapshotsdeletesample]                                                                                 | Deletes a snapshot. x-ms-original-file: specification/containerservice/resource-manager/Microsoft.ContainerService/aks/stable/2024-10-01/examples/SnapshotsDelete.json                                                                                                                                                                                                                                                                                                                                                                         |
| [snapshotsGetSample.js][snapshotsgetsample]                                                                                       | Gets a snapshot. x-ms-original-file: specification/containerservice/resource-manager/Microsoft.ContainerService/aks/stable/2024-10-01/examples/SnapshotsGet.json                                                                                                                                                                                                                                                                                                                                                                               |
| [snapshotsListByResourceGroupSample.js][snapshotslistbyresourcegroupsample]                                                       | Lists snapshots in the specified subscription and resource group. x-ms-original-file: specification/containerservice/resource-manager/Microsoft.ContainerService/aks/stable/2024-10-01/examples/SnapshotsListByResourceGroup.json                                                                                                                                                                                                                                                                                                              |
| [snapshotsListSample.js][snapshotslistsample]                                                                                     | Gets a list of snapshots in the specified subscription. x-ms-original-file: specification/containerservice/resource-manager/Microsoft.ContainerService/aks/stable/2024-10-01/examples/SnapshotsList.json                                                                                                                                                                                                                                                                                                                                       |
| [snapshotsUpdateTagsSample.js][snapshotsupdatetagssample]                                                                         | Updates tags on a snapshot. x-ms-original-file: specification/containerservice/resource-manager/Microsoft.ContainerService/aks/stable/2024-10-01/examples/SnapshotsUpdateTags.json                                                                                                                                                                                                                                                                                                                                                             |
| [trustedAccessRoleBindingsCreateOrUpdateSample.js][trustedaccessrolebindingscreateorupdatesample]                                 | Create or update a trusted access role binding x-ms-original-file: specification/containerservice/resource-manager/Microsoft.ContainerService/aks/stable/2024-10-01/examples/TrustedAccessRoleBindings_CreateOrUpdate.json                                                                                                                                                                                                                                                                                                                     |
| [trustedAccessRoleBindingsDeleteSample.js][trustedaccessrolebindingsdeletesample]                                                 | Delete a trusted access role binding. x-ms-original-file: specification/containerservice/resource-manager/Microsoft.ContainerService/aks/stable/2024-10-01/examples/TrustedAccessRoleBindings_Delete.json                                                                                                                                                                                                                                                                                                                                      |
| [trustedAccessRoleBindingsGetSample.js][trustedaccessrolebindingsgetsample]                                                       | Get a trusted access role binding. x-ms-original-file: specification/containerservice/resource-manager/Microsoft.ContainerService/aks/stable/2024-10-01/examples/TrustedAccessRoleBindings_Get.json                                                                                                                                                                                                                                                                                                                                            |
| [trustedAccessRoleBindingsListSample.js][trustedaccessrolebindingslistsample]                                                     | List trusted access role bindings. x-ms-original-file: specification/containerservice/resource-manager/Microsoft.ContainerService/aks/stable/2024-10-01/examples/TrustedAccessRoleBindings_List.json                                                                                                                                                                                                                                                                                                                                           |
| [trustedAccessRolesListSample.js][trustedaccessroleslistsample]                                                                   | List supported trusted access roles. x-ms-original-file: specification/containerservice/resource-manager/Microsoft.ContainerService/aks/stable/2024-10-01/examples/TrustedAccessRoles_List.json                                                                                                                                                                                                                                                                                                                                                |

## Prerequisites

The sample programs are compatible with [LTS versions of Node.js](https://github.com/nodejs/release#release-schedule).

You need [an Azure subscription][freesub] to run these sample programs.

Samples retrieve credentials to access the service endpoint from environment variables. Alternatively, edit the source code to include the appropriate credentials. See each individual sample for details on which environment variables/credentials it requires to function.

Adapting the samples to run in the browser may require some additional consideration. For details, please see the [package README][package].

## Setup

To run the samples using the published version of the package:

1. Install the dependencies using `npm`:

```bash
npm install
```

2. Edit the file `sample.env`, adding the correct credentials to access the Azure service and run the samples. Then rename the file from `sample.env` to just `.env`. The sample programs will read this file automatically.

3. Run whichever samples you like (note that some samples may require additional setup, see the table above):

```bash
node agentPoolsAbortLatestOperationSample.js
```

Alternatively, run a single sample with the correct environment variables set (setting up the `.env` file is not required if you do this), for example (cross-platform):

```bash
npx dev-tool run vendored cross-env CONTAINERSERVICE_SUBSCRIPTION_ID="<containerservice subscription id>" CONTAINERSERVICE_RESOURCE_GROUP="<containerservice resource group>" node agentPoolsAbortLatestOperationSample.js
```

## Next Steps

Take a look at our [API Documentation][apiref] for more information about the APIs that are available in the clients.

[agentpoolsabortlatestoperationsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/containerservice/arm-containerservice/samples/v21/javascript/agentPoolsAbortLatestOperationSample.js
[agentpoolscreateorupdatesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/containerservice/arm-containerservice/samples/v21/javascript/agentPoolsCreateOrUpdateSample.js
[agentpoolsdeletemachinessample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/containerservice/arm-containerservice/samples/v21/javascript/agentPoolsDeleteMachinesSample.js
[agentpoolsdeletesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/containerservice/arm-containerservice/samples/v21/javascript/agentPoolsDeleteSample.js
[agentpoolsgetavailableagentpoolversionssample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/containerservice/arm-containerservice/samples/v21/javascript/agentPoolsGetAvailableAgentPoolVersionsSample.js
[agentpoolsgetsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/containerservice/arm-containerservice/samples/v21/javascript/agentPoolsGetSample.js
[agentpoolsgetupgradeprofilesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/containerservice/arm-containerservice/samples/v21/javascript/agentPoolsGetUpgradeProfileSample.js
[agentpoolslistsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/containerservice/arm-containerservice/samples/v21/javascript/agentPoolsListSample.js
[agentpoolsupgradenodeimageversionsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/containerservice/arm-containerservice/samples/v21/javascript/agentPoolsUpgradeNodeImageVersionSample.js
[machinesgetsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/containerservice/arm-containerservice/samples/v21/javascript/machinesGetSample.js
[machineslistsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/containerservice/arm-containerservice/samples/v21/javascript/machinesListSample.js
[maintenanceconfigurationscreateorupdatesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/containerservice/arm-containerservice/samples/v21/javascript/maintenanceConfigurationsCreateOrUpdateSample.js
[maintenanceconfigurationsdeletesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/containerservice/arm-containerservice/samples/v21/javascript/maintenanceConfigurationsDeleteSample.js
[maintenanceconfigurationsgetsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/containerservice/arm-containerservice/samples/v21/javascript/maintenanceConfigurationsGetSample.js
[maintenanceconfigurationslistbymanagedclustersample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/containerservice/arm-containerservice/samples/v21/javascript/maintenanceConfigurationsListByManagedClusterSample.js
[managedclustersabortlatestoperationsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/containerservice/arm-containerservice/samples/v21/javascript/managedClustersAbortLatestOperationSample.js
[managedclusterscreateorupdatesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/containerservice/arm-containerservice/samples/v21/javascript/managedClustersCreateOrUpdateSample.js
[managedclustersdeletesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/containerservice/arm-containerservice/samples/v21/javascript/managedClustersDeleteSample.js
[managedclustersgetaccessprofilesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/containerservice/arm-containerservice/samples/v21/javascript/managedClustersGetAccessProfileSample.js
[managedclustersgetcommandresultsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/containerservice/arm-containerservice/samples/v21/javascript/managedClustersGetCommandResultSample.js
[managedclustersgetguardrailsversionssample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/containerservice/arm-containerservice/samples/v21/javascript/managedClustersGetGuardrailsVersionsSample.js
[managedclustersgetmeshrevisionprofilesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/containerservice/arm-containerservice/samples/v21/javascript/managedClustersGetMeshRevisionProfileSample.js
[managedclustersgetmeshupgradeprofilesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/containerservice/arm-containerservice/samples/v21/javascript/managedClustersGetMeshUpgradeProfileSample.js
[managedclustersgetsafeguardsversionssample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/containerservice/arm-containerservice/samples/v21/javascript/managedClustersGetSafeguardsVersionsSample.js
[managedclustersgetsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/containerservice/arm-containerservice/samples/v21/javascript/managedClustersGetSample.js
[managedclustersgetupgradeprofilesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/containerservice/arm-containerservice/samples/v21/javascript/managedClustersGetUpgradeProfileSample.js
[managedclusterslistbyresourcegroupsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/containerservice/arm-containerservice/samples/v21/javascript/managedClustersListByResourceGroupSample.js
[managedclusterslistclusteradmincredentialssample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/containerservice/arm-containerservice/samples/v21/javascript/managedClustersListClusterAdminCredentialsSample.js
[managedclusterslistclustermonitoringusercredentialssample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/containerservice/arm-containerservice/samples/v21/javascript/managedClustersListClusterMonitoringUserCredentialsSample.js
[managedclusterslistclusterusercredentialssample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/containerservice/arm-containerservice/samples/v21/javascript/managedClustersListClusterUserCredentialsSample.js
[managedclusterslistguardrailsversionssample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/containerservice/arm-containerservice/samples/v21/javascript/managedClustersListGuardrailsVersionsSample.js
[managedclusterslistkubernetesversionssample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/containerservice/arm-containerservice/samples/v21/javascript/managedClustersListKubernetesVersionsSample.js
[managedclusterslistmeshrevisionprofilessample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/containerservice/arm-containerservice/samples/v21/javascript/managedClustersListMeshRevisionProfilesSample.js
[managedclusterslistmeshupgradeprofilessample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/containerservice/arm-containerservice/samples/v21/javascript/managedClustersListMeshUpgradeProfilesSample.js
[managedclusterslistoutboundnetworkdependenciesendpointssample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/containerservice/arm-containerservice/samples/v21/javascript/managedClustersListOutboundNetworkDependenciesEndpointsSample.js
[managedclusterslistsafeguardsversionssample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/containerservice/arm-containerservice/samples/v21/javascript/managedClustersListSafeguardsVersionsSample.js
[managedclusterslistsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/containerservice/arm-containerservice/samples/v21/javascript/managedClustersListSample.js
[managedclustersrebalanceloadbalancerssample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/containerservice/arm-containerservice/samples/v21/javascript/managedClustersRebalanceLoadBalancersSample.js
[managedclustersresetaadprofilesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/containerservice/arm-containerservice/samples/v21/javascript/managedClustersResetAadProfileSample.js
[managedclustersresetserviceprincipalprofilesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/containerservice/arm-containerservice/samples/v21/javascript/managedClustersResetServicePrincipalProfileSample.js
[managedclustersrotateclustercertificatessample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/containerservice/arm-containerservice/samples/v21/javascript/managedClustersRotateClusterCertificatesSample.js
[managedclustersrotateserviceaccountsigningkeyssample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/containerservice/arm-containerservice/samples/v21/javascript/managedClustersRotateServiceAccountSigningKeysSample.js
[managedclustersruncommandsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/containerservice/arm-containerservice/samples/v21/javascript/managedClustersRunCommandSample.js
[managedclustersstartsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/containerservice/arm-containerservice/samples/v21/javascript/managedClustersStartSample.js
[managedclustersstopsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/containerservice/arm-containerservice/samples/v21/javascript/managedClustersStopSample.js
[managedclustersupdatetagssample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/containerservice/arm-containerservice/samples/v21/javascript/managedClustersUpdateTagsSample.js
[operationslistsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/containerservice/arm-containerservice/samples/v21/javascript/operationsListSample.js
[privateendpointconnectionsdeletesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/containerservice/arm-containerservice/samples/v21/javascript/privateEndpointConnectionsDeleteSample.js
[privateendpointconnectionsgetsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/containerservice/arm-containerservice/samples/v21/javascript/privateEndpointConnectionsGetSample.js
[privateendpointconnectionslistsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/containerservice/arm-containerservice/samples/v21/javascript/privateEndpointConnectionsListSample.js
[privateendpointconnectionsupdatesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/containerservice/arm-containerservice/samples/v21/javascript/privateEndpointConnectionsUpdateSample.js
[privatelinkresourceslistsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/containerservice/arm-containerservice/samples/v21/javascript/privateLinkResourcesListSample.js
[resolveprivatelinkserviceidpostsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/containerservice/arm-containerservice/samples/v21/javascript/resolvePrivateLinkServiceIdPostSample.js
[snapshotscreateorupdatesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/containerservice/arm-containerservice/samples/v21/javascript/snapshotsCreateOrUpdateSample.js
[snapshotsdeletesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/containerservice/arm-containerservice/samples/v21/javascript/snapshotsDeleteSample.js
[snapshotsgetsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/containerservice/arm-containerservice/samples/v21/javascript/snapshotsGetSample.js
[snapshotslistbyresourcegroupsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/containerservice/arm-containerservice/samples/v21/javascript/snapshotsListByResourceGroupSample.js
[snapshotslistsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/containerservice/arm-containerservice/samples/v21/javascript/snapshotsListSample.js
[snapshotsupdatetagssample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/containerservice/arm-containerservice/samples/v21/javascript/snapshotsUpdateTagsSample.js
[trustedaccessrolebindingscreateorupdatesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/containerservice/arm-containerservice/samples/v21/javascript/trustedAccessRoleBindingsCreateOrUpdateSample.js
[trustedaccessrolebindingsdeletesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/containerservice/arm-containerservice/samples/v21/javascript/trustedAccessRoleBindingsDeleteSample.js
[trustedaccessrolebindingsgetsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/containerservice/arm-containerservice/samples/v21/javascript/trustedAccessRoleBindingsGetSample.js
[trustedaccessrolebindingslistsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/containerservice/arm-containerservice/samples/v21/javascript/trustedAccessRoleBindingsListSample.js
[trustedaccessroleslistsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/containerservice/arm-containerservice/samples/v21/javascript/trustedAccessRolesListSample.js
[apiref]: https://learn.microsoft.com/javascript/api/@azure/arm-containerservice?view=azure-node-preview
[freesub]: https://azure.microsoft.com/free/
[package]: https://github.com/Azure/azure-sdk-for-js/tree/main/sdk/containerservice/arm-containerservice/README.md
